@@ -1,7 +1,9 @@
 package twilightforest.entity.monster;
 
 import net.minecraft.core.BlockPos;
+import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundEvent;
+import net.minecraft.sounds.SoundEvents;
 import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.entity.*;
 import net.minecraft.world.entity.ai.attributes.AttributeSupplier;
@@ -11,14 +13,17 @@ import net.minecraft.world.entity.ai.goal.target.HurtByTargetGoal;
 import net.minecraft.world.entity.ai.goal.target.NearestAttackableTargetGoal;
 import net.minecraft.world.entity.monster.Monster;
 import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.entity.vehicle.boat.Boat;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.Vec3;
-import twilightforest.data.tags.EntityTagGenerator;
+import org.jetbrains.annotations.Nullable;
 import twilightforest.entity.IHostileMount;
 import twilightforest.entity.ai.goal.ChargeAttackGoal;
 import twilightforest.init.TFDamageTypes;
 import twilightforest.init.TFSounds;
+import twilightforest.tags.TFEntityTypeTags;
+import twilightforest.util.entities.EntityUtil;
 
 public class PinchBeetle extends Monster implements IHostileMount {
 
@@ -40,10 +45,16 @@ public class PinchBeetle extends Monster implements IHostileMount {
 
 	public static AttributeSupplier.Builder registerAttributes() {
 		return Monster.createMonsterAttributes()
-				.add(Attributes.MAX_HEALTH, 40.0D)
-				.add(Attributes.MOVEMENT_SPEED, 0.23D)
-				.add(Attributes.ATTACK_DAMAGE, 4.0D)
-				.add(Attributes.ARMOR, 2.0D);
+			.add(Attributes.MAX_HEALTH, 40.0D)
+			.add(Attributes.MOVEMENT_SPEED, 0.23D)
+			.add(Attributes.ATTACK_DAMAGE, 4.0D)
+			.add(Attributes.ARMOR, 2.0D);
+	}
+
+	@Nullable
+	@Override
+	protected SoundEvent getAmbientSound() {
+		return TFSounds.PINCH_BEETLE_AMBIENT.get();
 	}
 
 	@Override
@@ -63,19 +74,25 @@ public class PinchBeetle extends Monster implements IHostileMount {
 
 	@Override
 	public void aiStep() {
-
 		super.aiStep();
 		this.dimensions = this.getDimensions(this.getPose());
 
 		if (!this.getPassengers().isEmpty()) {
-			this.getLookControl().setLookAt(this.getPassengers().get(0), 100.0F, 100.0F);
+			Entity passenger = this.getPassengers().getFirst();
+
+			if (passenger.getVehicle() != this) {
+				this.removePassenger(passenger);
+				return;
+			}
+
+			this.getLookControl().setLookAt(passenger, 100.0F, 100.0F);
 			//always set our passenger as our target
-			if (this.getPassengers().get(0) instanceof LivingEntity entity) {
+			if (passenger instanceof LivingEntity entity) {
 				this.setTarget(entity);
 			}
 
 			//if our held player switches gamemodes let them go
-			if (this.getPassengers().get(0) instanceof Player player && player.getAbilities().invulnerable) {
+			if (passenger instanceof Player player && player.getAbilities().invulnerable) {
 				player.stopRiding();
 				this.setTarget(null);
 			}
@@ -83,63 +100,50 @@ public class PinchBeetle extends Monster implements IHostileMount {
 	}
 
 	@Override
+	public void die(DamageSource source) {
+		if (!this.getPassengers().isEmpty()) {
+			this.getPassengers().forEach(Entity::stopRiding);
+		}
+		super.die(source);
+	}
+
+	@Override
 	public void knockback(double x, double y, double z) {
 		//only take knockback if not holding something
-		if(this.getPassengers().isEmpty()) {
+		if (this.getPassengers().isEmpty()) {
 			super.knockback(x, y, z);
 		}
 	}
 
 	@Override
-	public boolean doHurtTarget(Entity entity) {
+	public boolean doHurtTarget(ServerLevel server, Entity entity) {
 		if (this.getPassengers().isEmpty()) {
 			var v = entity.getVehicle();
 
-			if (v == null || !v.getType().is(EntityTagGenerator.RIDES_OBSTRUCT_SNATCHING)) {
+			if (v == null || !v.is(TFEntityTypeTags.RIDES_OBSTRUCT_SNATCHING)) {
 				// Pluck them from the boat, minecart, donkey, or whatever
 				entity.stopRiding();
 
-				entity.startRiding(this, true);
+				entity.startRiding(this, true, false); //I mean, they aren't riding purposefully, don't send an event
 			}
 		}
-		entity.hurt(TFDamageTypes.getEntityDamageSource(this.level(), TFDamageTypes.CLAMPED, this), (float) this.getAttributeValue(Attributes.ATTACK_DAMAGE));
-		return super.doHurtTarget(entity);
+		return EntityUtil.properlyApplyCustomDamageSource(this, entity, TFDamageTypes.getEntityDamageSource(this.level(), TFDamageTypes.CLAMPED, this), null);
 	}
 
 	@Override
-	public float getEyeHeight(Pose pose) {
-		return 0.25F;
-	}
-
-	@Override
-	public void positionRider(Entity passenger, Entity.MoveFunction callback) {
-		if (!this.getPassengers().isEmpty()) {
-			Vec3 riderPos = this.getRiderPosition();
-			callback.accept(passenger, riderPos.x(), riderPos.y(), riderPos.z());
+	public boolean startRiding(Entity entity, boolean force, boolean sendEventTriggers) {
+		if (entity instanceof Boat boat) {
+			boat.discard();
+			this.playSound(SoundEvents.ZOMBIE_BREAK_WOODEN_DOOR);
+			return false;
 		}
+
+		return super.startRiding(entity, force, sendEventTriggers);
 	}
 
 	@Override
-	public double getMyRidingOffset() {
-		return -0.1D;
-	}
-
-	@Override
-	public double getPassengersRidingOffset() {
-		return 0.75D;
-	}
-
-	private Vec3 getRiderPosition() {
-		if (!this.getPassengers().isEmpty()) {
-			float distance = 0.75F;
-
-			double dx = Math.cos((this.getYRot() + 90) * Math.PI / 180.0D) * distance;
-			double dz = Math.sin((this.getYRot() + 90) * Math.PI / 180.0D) * distance;
-
-			return new Vec3(this.getX() + dx, this.getY() + this.getPassengersRidingOffset() + this.getPassengers().get(0).getMyRidingOffset(), this.getZ() + dz);
-		} else {
-			return new Vec3(this.getX(), this.getY(), this.getZ());
-		}
+	protected Vec3 getPassengerAttachmentPoint(Entity entity, EntityDimensions dimensions, float yRot) {
+		return new Vec3(0.0F, this.getEyeHeight(), 0.75F);
 	}
 
 	@Override
@@ -148,17 +152,12 @@ public class PinchBeetle extends Monster implements IHostileMount {
 	}
 
 	@Override
-	public EntityDimensions getDimensions(Pose pose) {
+	public EntityDimensions getDefaultDimensions(Pose pose) {
 
 		if (!this.getPassengers().isEmpty()) {
-			return EntityDimensions.scalable(2.25F, 1.25F);
+			return EntityDimensions.scalable(2.2F, 1.6F);
 		} else {
-			return super.getDimensions(pose);
+			return super.getDefaultDimensions(pose);
 		}
-	}
-
-	@Override
-	public MobType getMobType() {
-		return MobType.ARTHROPOD;
 	}
 }
