@@ -1,6 +1,5 @@
 package twilightforest.events;
 
-import net.minecraft.ChatFormatting;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.NonNullList;
@@ -15,78 +14,89 @@ import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.component.ResolvableProfile;
 import net.minecraft.world.level.GameRules;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.material.FluidState;
-import net.minecraftforge.common.util.FakePlayer;
-import net.minecraftforge.event.entity.living.LivingDeathEvent;
-import net.minecraftforge.event.entity.player.PlayerEvent;
-import net.minecraftforge.eventbus.api.EventPriority;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.fml.ModList;
-import net.minecraftforge.fml.common.Mod;
-import top.theillusivec4.curios.api.CuriosApi;
-import top.theillusivec4.curios.api.SlotResult;
-import twilightforest.TFConfig;
+import net.neoforged.bus.api.EventPriority;
+import net.neoforged.fml.ModList;
+import net.neoforged.neoforge.common.NeoForge;
+import net.neoforged.neoforge.common.util.FakePlayer;
+import net.neoforged.neoforge.event.entity.living.LivingDeathEvent;
+import net.neoforged.neoforge.event.entity.player.PlayerEvent;
+import net.neoforged.neoforge.network.PacketDistributor;
+import net.neoforged.neoforge.registries.DeferredItem;
+import tamaized.beanification.PostConstruct;
 import twilightforest.TwilightForestMod;
 import twilightforest.block.KeepsakeCasketBlock;
-import twilightforest.block.entity.KeepsakeCasketBlockEntity;
-import twilightforest.data.tags.ItemTagGenerator;
-import twilightforest.entity.CharmEffect;
+import twilightforest.block.entity.SkullChestBlockEntity;
+import twilightforest.compat.curios.CuriosCompat;
+import twilightforest.config.TFConfig;
+import twilightforest.tags.TFItemTags;
 import twilightforest.enums.BlockLoggingEnum;
-import twilightforest.init.*;
+import twilightforest.init.TFBlocks;
+import twilightforest.init.TFItems;
+import twilightforest.init.TFSounds;
+import twilightforest.init.TFStats;
+import twilightforest.network.SpawnCharmPacket;
 import twilightforest.util.TFItemStackUtils;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
-@Mod.EventBusSubscriber(modid = TwilightForestMod.ID)
+@tamaized.beanification.Component
 public class CharmEvents {
 
 	public static final String CHARM_INV_TAG = "TFCharmInventory";
-	//stores if the casket was planned to break on respawn
-	private static boolean casketExpiration = false;
-	//stores the charm that was used for the effect later
-	public static ItemStack charmUsed;
+	public static final String CASKET_DAMAGE_TAG = "CasketDamage";
+	public static final String CONSUMED_CHARM_TAG = "CharmStack";
 
-	@SubscribeEvent(priority = EventPriority.HIGHEST)
-	// For when the player dies
-	public static void applyDeathItems(LivingDeathEvent event) {
+	@PostConstruct
+	private void setup() {
+		NeoForge.EVENT_BUS.addListener(EventPriority.HIGHEST, this::applyCharmOfLife);
+		NeoForge.EVENT_BUS.addListener(EventPriority.HIGH, this::applyKeepingAndCasket);
+		NeoForge.EVENT_BUS.addListener(this::returnItemsOnRespawn);
+	}
+
+	// Check for charm of life first to stop a player from dying
+	private void applyCharmOfLife(LivingDeathEvent event) {
 		LivingEntity living = event.getEntity();
 
 		//ensure our player is real and in survival before attempting anything
-		if (living.level().isClientSide() || !(living instanceof Player player) || living instanceof FakePlayer ||
+		if (event.isCanceled() || living.level().isClientSide() || !(living instanceof Player player) || living instanceof FakePlayer ||
 				player.isCreative() || player.isSpectator()) return;
 
-		if (charmOfLife(player)) {
-			event.setCanceled(true); // Executes if the player had charms
-		} else if (!living.level().getGameRules().getBoolean(GameRules.RULE_KEEPINVENTORY)) {
+		if (handleCharmOfLife(player)) event.setCanceled(true); // Executes if the player had charms
+	}
+
+	// Then check if the player should keep any items through death
+	private void applyKeepingAndCasket(LivingDeathEvent event) {
+		LivingEntity living = event.getEntity();
+
+		//ensure our player is real and in survival before attempting anything
+		if (event.isCanceled() || living.level().isClientSide() || !(living instanceof Player player) || living instanceof FakePlayer ||
+				player.isCreative() || player.isSpectator()) return;
+
+		if (!living.level().getGameRules().getBoolean(GameRules.RULE_KEEPINVENTORY)) {
 			// Did the player recover? No? Let's give them their stuff based on the keeping charms
-			charmOfKeeping(player);
+			handleCharmOfKeeping(player);
 
 			// Then let's store the rest of their stuff in the casket
-			keepsakeCasket(player);
+			stockKeepsakeCasket(player);
 		}
 	}
 
-	@SubscribeEvent
-	public static void onPlayerRespawn(PlayerEvent.PlayerRespawnEvent event) {
+	private void returnItemsOnRespawn(PlayerEvent.PlayerRespawnEvent event) {
 		if (!(event.getEntity() instanceof ServerPlayer serverPlayer)) return;
 		if (!event.isEndConquered()) {
-			if (casketExpiration) {
-				serverPlayer.sendSystemMessage(Component.translatable("block.twilightforest.casket.broken").withStyle(ChatFormatting.RED));
-				casketExpiration = false;
-			}
 			returnStoredItems(serverPlayer);
 		}
 	}
 
-	private static boolean charmOfLife(Player player) {
-		boolean charm2 = TFItemStackUtils.consumeInventoryItem(player, TFItems.CHARM_OF_LIFE_2.get()) || hasCharmCurio(TFItems.CHARM_OF_LIFE_2.get(), player);
-		boolean charm1 = !charm2 && (TFItemStackUtils.consumeInventoryItem(player, TFItems.CHARM_OF_LIFE_1.get()) || hasCharmCurio(TFItems.CHARM_OF_LIFE_1.get(), player));
+	private static boolean handleCharmOfLife(Player player) {
+		boolean charm2 = TFItemStackUtils.consumeInventoryItem(player, TFItems.CHARM_OF_LIFE_2.get(), getPlayerData(player), false) || hasCharmCurio(TFItems.CHARM_OF_LIFE_2.get(), player);
+		boolean charm1 = !charm2 && (TFItemStackUtils.consumeInventoryItem(player, TFItems.CHARM_OF_LIFE_1.get(), getPlayerData(player), false) || hasCharmCurio(TFItems.CHARM_OF_LIFE_1.get(), player));
 
 		if (charm2 || charm1) {
 			if (charm1) {
@@ -102,17 +112,10 @@ public class CharmEvents {
 				player.addEffect(new MobEffectInstance(MobEffects.FIRE_RESISTANCE, 600, 0));
 			}
 
-			// spawn effect thingers
-			CharmEffect effect = new CharmEffect(TFEntities.CHARM_EFFECT.get(), player.level(), player, charm1 ? TFItems.CHARM_OF_LIFE_1.get() : TFItems.CHARM_OF_LIFE_2.get());
-			player.level().addFreshEntity(effect);
-
-			CharmEffect effect2 = new CharmEffect(TFEntities.CHARM_EFFECT.get(), player.level(), player, charm1 ? TFItems.CHARM_OF_LIFE_1.get() : TFItems.CHARM_OF_LIFE_2.get());
-			effect2.offset = (float) Math.PI;
-			player.level().addFreshEntity(effect2);
-
-			player.level().playSound(null, player.getX(), player.getY(), player.getZ(), TFSounds.CHARM_LIFE.get(), player.getSoundSource(), 1, 1);
-
-			if (player instanceof ServerPlayer) player.awardStat(TFStats.LIFE_CHARMS_ACTIVATED.get());
+			if (player instanceof ServerPlayer serverPlayer) {
+				PacketDistributor.sendToPlayer(serverPlayer, new SpawnCharmPacket(new ItemStack(charm1 ? TFItems.CHARM_OF_LIFE_1.get() : TFItems.CHARM_OF_LIFE_2.get()), TFSounds.CHARM_LIFE.getKey()));
+				serverPlayer.awardStat(TFStats.LIFE_CHARMS_ACTIVATED.get());
+			}
 
 			return true;
 		}
@@ -120,48 +123,24 @@ public class CharmEvents {
 		return false;
 	}
 
-	private static void charmOfKeeping(Player player) {
-		//check our inventory for any charms of keeping. We also want to check curio slots (if the mod is installed)
-		// TODO also consider situations where the actual slots may be empty, and charm gets consumed anyway. Usually won't happen.
-		boolean tier3 = TFItemStackUtils.consumeInventoryItem(player, TFItems.CHARM_OF_KEEPING_3.get()) || hasCharmCurio(TFItems.CHARM_OF_KEEPING_3.get(), player);
-		boolean tier2 = tier3 || TFItemStackUtils.consumeInventoryItem(player, TFItems.CHARM_OF_KEEPING_2.get()) || hasCharmCurio(TFItems.CHARM_OF_KEEPING_2.get(), player);
-		boolean tier1 = tier2 || TFItemStackUtils.consumeInventoryItem(player, TFItems.CHARM_OF_KEEPING_1.get()) || hasCharmCurio(TFItems.CHARM_OF_KEEPING_1.get(), player);
-
+	private static void handleCharmOfKeeping(Player player) {
 		//create a fake inventory to organize our kept inventory in
-		Inventory keepInventory = new Inventory(null);
+		Inventory keepInventory = new Inventory(player);
 		ListTag tagList = new ListTag();
 
-		//if we have any charm of keeping, all armor and offhand items are kept, so add those
-		if (tier1) {
-			keepWholeList(keepInventory.armor, player.getInventory().armor);
-			keepWholeList(keepInventory.offhand, player.getInventory().offhand);
-		}
-
-		if (tier3) {
-			//tier 3 keeps our entire inventory
-			keepWholeList(keepInventory.items, player.getInventory().items);
-			charmUsed = new ItemStack(TFItems.CHARM_OF_KEEPING_3.get());
-		} else if (tier2) {
-			//tier 2 keeps our hotbar only
-			for (int i = 0; i < 9; i++) {
-				keepInventory.items.set(i, player.getInventory().items.get(i).copy());
-				player.getInventory().items.set(i, ItemStack.EMPTY);
+		if (!applyCharm(TFItems.CHARM_OF_KEEPING_3, keepInventory, player, player.getInventory().items)) {
+			if (!applyCharm(TFItems.CHARM_OF_KEEPING_2, keepInventory, player, player.getInventory().items.subList(0, 9))) {
+				int i = player.getInventory().selected;
+				if (Inventory.isHotbarSlot(i)) {
+					applyCharm(TFItems.CHARM_OF_KEEPING_1, keepInventory, player, NonNullList.of(player.getInventory().items.get(i)));
+				}
 			}
-			charmUsed = new ItemStack(TFItems.CHARM_OF_KEEPING_2.get());
-		} else if (tier1) {
-			//tier 1 keeps our selected item only
-			int i = player.getInventory().selected;
-			if (Inventory.isHotbarSlot(i)) {
-				keepInventory.items.set(i, player.getInventory().items.get(i).copy());
-				player.getInventory().items.set(i, ItemStack.EMPTY);
-			}
-			charmUsed = new ItemStack(TFItems.CHARM_OF_KEEPING_1.get());
 		}
 
 		//keep all items in the kept_on_death tag. This allows modpacks to support other items to keep on death
 		for (int i = 0; i < player.getInventory().items.size(); i++) {
 			ItemStack stack = player.getInventory().items.get(i);
-			if (stack.is(ItemTagGenerator.KEPT_ON_DEATH)) {
+			if (stack.is(TFItemTags.KEPT_ON_DEATH)) {
 				keepInventory.items.set(i, stack.copy());
 				player.getInventory().items.set(i, ItemStack.EMPTY);
 			}
@@ -169,14 +148,14 @@ public class CharmEvents {
 
 		for (int i = 0; i < player.getInventory().armor.size(); i++) {
 			ItemStack armor = player.getInventory().armor.get(i);
-			if (armor.is(ItemTagGenerator.KEPT_ON_DEATH)) {
+			if (armor.is(TFItemTags.KEPT_ON_DEATH)) {
 				keepInventory.armor.set(i, armor.copy());
 				player.getInventory().armor.set(i, ItemStack.EMPTY);
 			}
 		}
 
-		if (player.getInventory().offhand.get(0).is(ItemTagGenerator.KEPT_ON_DEATH)) {
-			keepInventory.offhand.set(0, player.getInventory().offhand.get(0).copy());
+		if (player.getInventory().offhand.getFirst().is(TFItemTags.KEPT_ON_DEATH)) {
+			keepInventory.offhand.set(0, player.getInventory().offhand.getFirst().copy());
 			player.getInventory().offhand.set(0, ItemStack.EMPTY);
 		}
 
@@ -188,19 +167,40 @@ public class CharmEvents {
 		}
 	}
 
-	private static void keepsakeCasket(Player player) {
-		//reset this just in case. I was having fresh caskets place as the max damaged ones
-		TFItemStackUtils.damage = 0;
-		boolean casketConsumed = TFItemStackUtils.consumeInventoryItem(player, TFBlocks.KEEPSAKE_CASKET.get().asItem());
+	private static boolean applyCharm(DeferredItem<Item> charm, Inventory keptInventory, Player player, List<ItemStack> inventorySlots) {
+		List<ItemStack> mergedCheck = new ArrayList<>(inventorySlots);
+		//merge armor and offhand into check slots since theyll always be kept by a charm
+		mergedCheck.addAll(player.getInventory().armor);
+		mergedCheck.addAll(player.getInventory().offhand);
+		//first, check all affected slots to make sure they arent empty.
+		//filter out the charm so it doesnt count towards keeping items if its the only thing we are holding
+		if (mergedCheck.stream().filter(stack -> !stack.is(charm)).allMatch(ItemStack::isEmpty)) return false;
 
-		if (casketConsumed) {
-			Level level = player.getCommandSenderWorld();
+		//do we even have a charm? No? Then stop operation
+		if (!TFItemStackUtils.consumeInventoryItem(player, charm, getPlayerData(player), true) && !hasCharmCurio(charm.value(), player)) return false;
+
+		boolean keptACasket = keepWholeListAndCheckCasket(keptInventory.items, inventorySlots, charm == TFItems.CHARM_OF_KEEPING_3);
+		keptACasket = keepWholeListAndCheckCasket(keptInventory.armor, player.getInventory().armor, keptACasket);
+		keepWholeListAndCheckCasket(keptInventory.offhand, player.getInventory().offhand, keptACasket);
+
+		return true;
+	}
+
+	private static void stockKeepsakeCasket(Player player) {
+		//make sure we are still actually holding onto items before trying to place a casket
+		if (player.getInventory().hasAnyMatching(stack -> !stack.isEmpty() && !stack.is(TFItems.KEEPSAKE_CASKET))) {
+			boolean casketConsumed = TFItemStackUtils.consumeInventoryItem(player, TFBlocks.KEEPSAKE_CASKET, getPlayerData(player), false);
+
+			if (!casketConsumed)
+				return;
+
+			Level level = player.level();
 			BlockPos.MutableBlockPos pos = player.blockPosition().mutable();
 
 			if (pos.getY() < level.dimensionType().minY() + 2) {
 				pos.setY(level.dimensionType().minY() + 2);
 			} else {
-				int logicalHeight = player.getCommandSenderWorld().dimensionType().logicalHeight();
+				int logicalHeight = player.level().dimensionType().logicalHeight();
 
 				if (pos.getY() > logicalHeight) {
 					pos.setY(logicalHeight - 1);
@@ -216,55 +216,69 @@ public class CharmEvents {
 			BlockPos immutablePos = pos.immutable();
 			FluidState fluidState = level.getFluidState(immutablePos);
 
-			if (level.setBlockAndUpdate(immutablePos, TFBlocks.KEEPSAKE_CASKET.get().defaultBlockState().setValue(BlockLoggingEnum.MULTILOGGED, BlockLoggingEnum.getFromFluid(fluidState.getType())).setValue(KeepsakeCasketBlock.BREAKAGE, TFItemStackUtils.damage).setValue(KeepsakeCasketBlock.FACING, Direction.from2DDataValue(level.getRandom().nextInt(3))))) {
-				BlockEntity te = level.getBlockEntity(immutablePos);
+			int damage = getPlayerData(player).contains(CASKET_DAMAGE_TAG) ? getPlayerData(player).getInt(CASKET_DAMAGE_TAG) : 0;
+			BlockState setState = TFBlocks.KEEPSAKE_CASKET.get().defaultBlockState()
+				.setValue(BlockLoggingEnum.MULTILOGGED, BlockLoggingEnum.getFromFluid(fluidState.getType()))
+				.setValue(KeepsakeCasketBlock.BREAKAGE, damage)
+				.setValue(KeepsakeCasketBlock.FACING, Direction.from2DDataValue(level.getRandom().nextInt(3)));
 
-				if (te instanceof KeepsakeCasketBlockEntity casket) {
-					if (TFConfig.COMMON_CONFIG.casketUUIDLocking.get()) {
-						//make it so only the player who died can open the chest if our config allows us
-						casket.playeruuid = player.getGameProfile().getId();
-					} else {
-						casket.playeruuid = null;
-					}
-
-					//some names are way too long for the casket so we'll cut them down
-					String modifiedName;
-					if (player.getName().getString().length() > 12)
-						modifiedName = player.getName().getString().substring(0, 12);
-					else modifiedName = player.getName().getString();
-					casket.name = player.getName().getString();
-					casket.casketname = modifiedName;
-					casket.setCustomName(Component.literal(modifiedName + "'s " + (level.getRandom().nextInt(1000) == 0 ? "Costco Casket" : casket.getDisplayName().getString())));
-					int damage = level.getBlockState(immutablePos).getValue(KeepsakeCasketBlock.BREAKAGE);
-					if (level.getRandom().nextFloat() <= 0.15F) {
-						if (damage >= 2) {
-							player.getInventory().dropAll();
-							level.setBlockAndUpdate(immutablePos, Blocks.AIR.defaultBlockState());
-							casketExpiration = true;
-							TwilightForestMod.LOGGER.debug("{}'s Casket damage value was too high, alerting the player and dropping extra items", player.getName().getString());
-						} else {
-							damage = damage + 1;
-							level.setBlockAndUpdate(immutablePos, TFBlocks.KEEPSAKE_CASKET.get().defaultBlockState().setValue(BlockLoggingEnum.MULTILOGGED, BlockLoggingEnum.getFromFluid(fluidState.getType())).setValue(KeepsakeCasketBlock.BREAKAGE, damage));
-							TwilightForestMod.LOGGER.debug("{}'s Casket was randomly damaged, applying new damage", player.getName().getString());
-						}
-					}
-					int casketCapacity = casket.getContainerSize();
-					List<ItemStack> list = new ArrayList<>(casketCapacity);
-					NonNullList<ItemStack> filler = NonNullList.withSize(4, ItemStack.EMPTY);
-
-					// lets add our inventory exactly how it was on us
-					list.addAll(TFItemStackUtils.sortArmorForCasket(player));
-					player.getInventory().armor.clear();
-					list.addAll(filler);
-					list.addAll(player.getInventory().offhand);
-					player.getInventory().offhand.clear();
-					list.addAll(TFItemStackUtils.sortInvForCasket(player));
-					player.getInventory().items.clear();
-
-					casket.setItems(NonNullList.of(ItemStack.EMPTY, list.toArray(new ItemStack[casketCapacity])));
+			if (player.getRandom().nextFloat() <= 0.15F) {
+				if (damage >= 2) {
+					setState = TFBlocks.SKULL_CHEST.get().withPropertiesOf(setState);
+					TwilightForestMod.LOGGER.debug("{}'s Casket damage value was too high, placing Skull Chest instead", player.getName().getString());
+				} else {
+					damage = damage + 1;
+					setState = TFBlocks.KEEPSAKE_CASKET.get().withPropertiesOf(setState).setValue(KeepsakeCasketBlock.BREAKAGE, damage);
+					TwilightForestMod.LOGGER.debug("{}'s Casket was randomly damaged, applying new damage", player.getName().getString());
 				}
+			}
+
+			if (!level.setBlockAndUpdate(immutablePos, setState)) {
+				TwilightForestMod.LOGGER.error("Could not place Keepsake Casket at {}", pos);
+				return;
+			}
+
+			if (!(level.getBlockEntity(immutablePos) instanceof SkullChestBlockEntity casket)) {
+				TwilightForestMod.LOGGER.error("Failed to set Keepsake Casket data at {}", pos);
+				return;
+			}
+
+			if (TFConfig.casketUUIDLocking) {
+				//make it so only the player who died can open the chest if our config allows us
+				casket.owner = new ResolvableProfile(player.getGameProfile());
 			} else {
-				TwilightForestMod.LOGGER.error("Could not place Keepsake Casket at " + pos);
+				casket.owner = null;
+			}
+
+			//some names are way too long for the casket so we'll cut them down
+			String modifiedName = player.getName().getString().substring(0, Math.min(12, player.getName().getString().length()));
+			casket.name = (Component.literal(modifiedName + "'s " + (level.getRandom().nextInt(1000) == 0 ? "Costco Casket" : casket.getDisplayName().getString())));
+
+			int casketCapacity = casket.getContainerSize();
+			List<ItemStack> list = new ArrayList<>(casketCapacity);
+			NonNullList<ItemStack> filler = NonNullList.withSize(4, ItemStack.EMPTY);
+
+			// lets add our inventory exactly how it was on us
+			list.addAll(TFItemStackUtils.sortArmorForCasket(player));
+			player.getInventory().armor.clear();
+			list.addAll(filler);
+			list.addAll(player.getInventory().offhand);
+			player.getInventory().offhand.clear();
+			list.addAll(TFItemStackUtils.sortInvForCasket(player));
+			player.getInventory().items.clear();
+
+			casket.setItems(NonNullList.of(ItemStack.EMPTY, list.toArray(new ItemStack[casketCapacity])));
+			getPlayerData(player).remove(CASKET_DAMAGE_TAG);
+		} else {
+			//inventory is empty minus the casket: put the casket into the kept inventory
+			for (int i = 0; i < player.getInventory().getContainerSize(); i++) {
+				if (player.getInventory().getItem(i).is(TFItems.KEEPSAKE_CASKET)) {
+					Inventory tmp = new Inventory(player);
+					tmp.load(getPlayerData(player).getList(CHARM_INV_TAG, 10));
+					tmp.add(player.getInventory().getItem(i).copy());
+					player.getInventory().setItem(i, ItemStack.EMPTY);
+					getPlayerData(player).put(CHARM_INV_TAG, tmp.save(new ListTag()));
+				}
 			}
 		}
 	}
@@ -280,23 +294,20 @@ public class CharmEvents {
 		CompoundTag playerData = getPlayerData(player);
 		if (!player.level().isClientSide() && playerData.contains(CHARM_INV_TAG)) {
 			ListTag tagList = playerData.getList(CHARM_INV_TAG, 10);
-			TFItemStackUtils.loadNoClear(tagList, player.getInventory());
+			TFItemStackUtils.loadNoClear(player.registryAccess(), tagList, player.getInventory());
 			getPlayerData(player).getList(CHARM_INV_TAG, 10).clear();
 			getPlayerData(player).remove(CHARM_INV_TAG);
 		}
 
 		// spawn effect thingers
-		if (charmUsed != null) {
-			CharmEffect effect = new CharmEffect(TFEntities.CHARM_EFFECT.get(), player.level(), player, charmUsed.getItem());
-			player.level().addFreshEntity(effect);
+		if (getPlayerData(player).contains(CONSUMED_CHARM_TAG)) {
+			ItemStack stack = ItemStack.parseOptional(player.registryAccess(), (CompoundTag) getPlayerData(player).get(CONSUMED_CHARM_TAG));
 
-			CharmEffect effect2 = new CharmEffect(TFEntities.CHARM_EFFECT.get(), player.level(), player, charmUsed.getItem());
-			effect2.offset = (float) Math.PI;
-			player.level().addFreshEntity(effect2);
-
-			player.level().playSound(null, player.getX(), player.getY(), player.getZ(), TFSounds.CHARM_KEEP.get(), player.getSoundSource(), 1.5F, 1.0F);
-			if (player instanceof ServerPlayer) player.awardStat(TFStats.KEEPING_CHARMS_ACTIVATED.get());
-			charmUsed = null;
+			if (player instanceof ServerPlayer serverPlayer) {
+				PacketDistributor.sendToPlayer(serverPlayer, new SpawnCharmPacket(stack, TFSounds.CHARM_KEEP.getKey()));
+				serverPlayer.awardStat(TFStats.KEEPING_CHARMS_ACTIVATED.get());
+			}
+			getPlayerData(player).remove(CONSUMED_CHARM_TAG);
 		}
 	}
 
@@ -308,24 +319,30 @@ public class CharmEvents {
 	}
 
 	//transfers a list of items to another
-	private static void keepWholeList(NonNullList<ItemStack> transferTo, NonNullList<ItemStack> transferFrom) {
+	private static boolean keepWholeListAndCheckCasket(NonNullList<ItemStack> transferTo, List<ItemStack> transferFrom, boolean skipCasketCheck) {
+		boolean keptCasket = false;
 		for (int i = 0; i < transferFrom.size(); i++) {
-			transferTo.set(i, transferFrom.get(i).copy());
+			var item = transferFrom.get(i).copy();
+			if (skipCasketCheck || (!item.is(TFItems.KEEPSAKE_CASKET) || keptCasket)) {
+				transferTo.set(i, item);
+				transferFrom.set(i, ItemStack.EMPTY);
+			} else {
+				keptCasket = true;
+				if (item.getCount() > 1) {
+					item.shrink(1);
+					transferTo.set(i, item);
+					transferFrom.set(i, item.copyWithCount(1));
+				}
+			}
 		}
-		transferFrom.clear();
+		return keptCasket || skipCasketCheck;
 	}
 
 	private static boolean hasCharmCurio(Item item, Player player) {
 		if (ModList.get().isLoaded("curios")) {
-			Optional<SlotResult> slot = CuriosApi.getCuriosHelper().findFirstCurio(player, stack -> stack.is(item));
-
-			if (slot.isPresent()) {
-				slot.get().stack().shrink(1);
-				return true;
-			}
+			return CuriosCompat.findAndConsumeCurio(item, player);
 		}
 
 		return false;
 	}
-
 }
